@startuml

title __AABB's Class Diagram__\n

  package engine {
    package engine.collision {
      package engine.collision.aabb {
        class AABBAABBCollision {
            + AABBAABBCollision()
            + resolve()
            + toString()
        }
      }
    }
  }
  

  package engine {
    package engine.collision {
      package engine.collision.aabb {
        abstract class AABBCollision {
            + AABBCollision()
        }
      }
    }
  }
  

  package engine {
    package engine.collision {
      package engine.collision.aabb {
        class AABBOBBCollision {
            + AABBOBBCollision()
            + resolve()
        }
      }
    }
  }
  

  package engine {
    package engine.collision {
      package engine.collision.aabb {
        class AABBSphereCollision {
            + AABBSphereCollision()
            + resolve()
        }
      }
    }
  }
  

  AABBAABBCollision -up-|> AABBCollision
  AABBCollision -up-|> Collision
  AABBOBBCollision -up-|> AABBCollision
  AABBSphereCollision -up-|> AABBCollision


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
